# os-r

./: Cargo.toml  Makefile  gdb.script
.cargo/: config
src/: consts.rs  context.rs  init.rs  interrupt.rs  io.rs  lang_item.rs  lib.rs  sbi.rs  timer.rs
src/boot/: entry64.asm  linker64.ld
src/memory/: .hybrid_allocator.rs.swp  .slub_allocator.rs.swp  allocator.rs  buddy_allocator.rs  frame_allocator.rs.bak  hybrid_allocator.rs  mod.rs  mutexed_allocator.rs  slub_allocator.rs
src/trap/: trap.asm
